# mywork-in-zemi

./: .editorconfig  README.md  pyproject.toml
src/slm/: __init__.py
transformer/: transformer.ipynb
