[project]
name = "slm"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Neginuko", email = "hirahaya0117@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.7",
    "black>=24.4.2",
    "mypy>=1.10.0",
    "pytest>=8.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slm"]
